k8s/05-serviceA.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicea
  namespace: hsrn-vip
spec:
  replicas: 2
  selector:
    matchLabels:
      app: servicea
  template:
    metadata:
      labels:
        app: servicea
    spec:
      containers:
      - name: servicea
        image: servicea:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "0.3"
            memory: "256Mi"
          requests:
            cpu: "0.1"
            memory: "128Mi"
        livenessProbe:
          exec:
            command:
            - ps
            - aux
            - '|'
            - grep
            - -v
            - grep
            - '|'
            - grep
            - -c
            - service_a.py
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
        - name: logs-volume
          mountPath: /app/logs
      volumes:
      - name: logs-volume
        persistentVolumeClaim:
          claimName: logs-pvc
