k8s/06-serviceB.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serviceb
  namespace: hsrn-vip
spec:
  replicas: 2
  selector:
    matchLabels:
      app: serviceb
  template:
    metadata:
      labels:
        app: serviceb
    spec:
      containers:
      - name: serviceb
        image: serviceb:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "0.5"
            memory: "256Mi"
          requests:
            cpu: "0.2"
            memory: "128Mi"
        livenessProbe:
          exec:
            command:
            - ps
            - aux
            - '|'
            - grep
            - -v
            - grep
            - '|'
            - grep
            - -c
            - service_b.py
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
        - name: logs-volume
          mountPath: /app/logs
      volumes:
      - name: logs-volume
        persistentVolumeClaim:
          claimName: logs-pvc
