k8s/07-serviceComplete.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicecomplete
  namespace: hsrn-vip
spec:
  replicas: 2
  selector:
    matchLabels:
      app: servicecomplete
  template:
    metadata:
      labels:
        app: servicecomplete
    spec:
      containers:
      - name: servicecomplete
        image: servicecomplete:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "0.3"
            memory: "256Mi"
          requests:
            cpu: "0.1"
            memory: "128Mi"
        livenessProbe:
          exec:
            command:
            - ps
            - aux
            - '|'
            - grep
            - -v
            - grep
            - '|'
            - grep
            - -c
            - service_complete.py
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
        - name: logs-volume
          mountPath: /app/logs
      volumes:
      - name: logs-volume
        persistentVolumeClaim:
          claimName: logs-pvc
